--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
       
       <div class="group-2">
         <a href= "test1.jpeg">
-        <img class="rectangle-8" src="test1.jpeg" />
+        <img class="rectangle-8" src="test1.jpg" />
         <div class="rectangle-9"></div>
         <div class="test-ct-scan">
           <span>
