--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
 
 </style>
-<body>
+<body style = "padding-right: 20px";>
   <div class="i-phone-13-14-4">
     <div class="rahul-kumar">Rahul Kumar</div>
     <div class="patient">Patient</div>
