--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
      
       
         <a href="test2.jpeg">
-        <img class="rectangle-82" src="test2.jpeg" />
+        <img class="rectangle-82" src="5-Figure2-1.png" />
         <div class="rectangle-92"></div>
         <div class="test-ct-scan2">
           <span>
